<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    android:background="@color/design_default_color_background">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="268dp"
        android:layout_height="67dp"
        android:layout_marginTop="140dp"
        android:cursorVisible="false"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/editTextNumber"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:drawable/btn_default"
        android:onClick="submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        style="?android:attr/borderlessButtonStyle"
        android:contentDescription="@string/submit_phone" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="279dp"
        android:layout_height="212dp"
        android:layout_marginTop="31dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_1" />

            <Button
                android:id="@+id/btn_2"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_2" />

            <Button
                android:id="@+id/btn_3"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_4" />

            <Button
                android:id="@+id/btn_5"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_5" />

            <Button
                android:id="@+id/btn_6"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_7" />

            <Button
                android:id="@+id/btn_8"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_8" />

            <Button
                android:id="@+id/btn_9"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="clear"
                android:text="@string/key_clear" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="enterNumber"
                android:text="@string/key_0" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:contentDescription="@string/key_delete"
                android:onClick="delete"
                android:theme="@style/Theme.AppCompat.Light"
                app:srcCompat="@android:drawable/ic_input_delete"
                app:tint="@color/design_default_color_on_secondary"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_prompt"
        android:layout_width="267dp"
        android:layout_height="36dp"
        android:layout_marginTop="84dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_text_prompt"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>